--- a/.gitignore
+++ b/.gitignore
@@ -27,13 +27,32 @@ hs_err_pid*
 .gradle
 build/
 bin/
-.DS_Store
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
 
 ### Node Dependencies ###
-/node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 ### STS ###
 .apt_generated
