--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'org.sen'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = '11'
 
 repositories {
@@ -13,7 +13,14 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '9.4.41.v20210516'
+    implementation group: 'org.eclipse.jetty', name: 'jetty-servlets', version: '9.4.41.v20210516'
+    implementation group: 'org.springframework', name: 'spring-aop', version: '5.3.7'
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.7'
+    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.7'
+    implementation group: 'org.springframework', name: 'spring-core', version: '5.3.7'
+    implementation group: 'org.springframework.boot', name: 'spring-boot'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
