--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "my-webpack-project",
+  "name": "spring-boot-and-react",
   "version": "1.0.0",
   "private": true,
-  "main": "./src/main/js/index.js",
+  "main": "./src/main/javascript/index.js",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -54,5 +59,5 @@
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   },
-  "description": "My webpack project"
+  "description": "Spring Boot and React"
 }
