--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-core', version: '5.3.7'
     implementation group: 'org.springframework.boot', name: 'spring-boot'
     implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
+    developmentOnly group: 'org.springframework.boot', name: 'spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
