--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.main.banner-mode=OFF
+spring.resources.chain.cache=false
+
+# DEVTOOLS (DevToolsProperties)
+spring.devtools.restart.enabled=true
+spring.devtools.restart.log-condition-evaluation-delta=false
+spring.devtools.restart.exclude=META-INF/maven/**,META-INF/resources/**,**/*Test.class,**/*Tests.class,git.properties,META-INF/build-info.properties
